Complete junkyard management system with Supabase auth, buyer profiles, and production deployment setup

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Junkyard Mgmt",
+  "name": "Junkyard Management System",
+  "description": "Complete junkyard management with NMVTIS compliance, vehicle tracking, and offline capabilities",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +21,11 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#1976d2",
+  "background_color": "#ffffff",
+  "orientation": "portrait-primary",
+  "scope": "/",
+  "categories": ["business", "productivity"],
+  "lang": "en-US",
+  "dir": "ltr"
 }
