--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@types/react-dom": "^19.1.6",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
+    "quagga": "^0.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-qr-barcode-scanner": "^2.1.6",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "tesseract.js": "^6.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
