--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.7",
     "@types/react-dom": "^19.1.6",
+    "@zxing/browser": "^0.1.5",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
     "quagga": "^0.12.1",
