--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@zxing/browser": "^0.1.5",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "quagga": "^0.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
