--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,24 @@
 {
   "short_name": "Junkyard Mgmt",
   "name": "Junkyard Management System",
-  "description": "Complete junkyard management with NMVTIS compliance, vehicle tracking, and offline capabilities",
+  "description": "Complete automotive salvage yard management with NMVTIS compliance, vehicle tracking, and offline capabilities",
   "icons": [
+    {
+      "src": "car-icon.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "car-icon.svg",
+      "sizes": "512x512", 
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": ".",
@@ -25,7 +27,7 @@
   "background_color": "#ffffff",
   "orientation": "portrait-primary",
   "scope": "/",
-  "categories": ["business", "productivity"],
+  "categories": ["business", "productivity", "automotive"],
   "lang": "en-US",
   "dir": "ltr"
 }
